@@ -47,6 +47,9 @@ If the input is a grayscale TIFF, this switch is
 automatically selected.
 Otherwise, the output defaults to 24-bit RGB.
 .TP
+.BR -z
+Output LZW-compressed TIFF (smaller file).
+.TP
 .BR -h
 Mimic human visual response in the output.
 The goal of this process is to produce output that correlates
